# LRT_end_effector_kinematics

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/end_effector_kinematics/: MultiEndEffectorKinematics.hpp  QuadrupedBaseController.hpp  forward_kinematics.hpp
include/lrt_inverse_kinematics/: InverseKinematics.hpp  InverseKinematicsInfo.hpp  InverseKinematicsSolver.hpp  InverseKinematicsTest.hpp
include/lrt_inverse_kinematics/path_management/: package_path.h.in
include/lrt_inverse_kinematics/solvers/: InverseSolverInterface.hpp  SolversList.hpp
include/lrt_inverse_kinematics/solvers/differential_solvers/: DifferentialSolver.hpp  NewtonRaphsonSolver.hpp
include/lrt_inverse_kinematics/solvers/gradient_based/: GradientBasedSolver.hpp  NewtonRaphsonSolver.hpp  NewtonRaphsonSolverAD.hpp
include/lrt_inverse_kinematics/solvers/iterational/: IterationalSolver.hpp  NewtonRaphsonSolver.hpp
include/lrt_inverse_kinematics/solvers/iterational_solvers/: IterationalSolver.hpp
include/multi_end_effector_kinematics/: MultiEndEffectorKinematics.hpp  Settings.hpp
include/multi_end_effector_kinematics/path_management/: package_path.h.in
include/multi_end_effector_kinematics/solvers/: InverseSolverInterface.hpp  SolversList.hpp
include/multi_end_effector_kinematics/solvers/gradient_based/: GradientBasedSolver.hpp  NewtonRaphsonSolver.hpp  NewtonRaphsonSolverAD.hpp
include_old/end_effector_kinematics/: EndEffectorKinematicsInfo.hpp  ForwardEndEffectorKinematics.hpp  inverse_kinematics.hpp  trajectory_generator.hpp
src/: InverseKinematics.cpp  InverseKinematicsInfo.cpp  InverseKinematicsSolver.cpp  MultiEndEffectorKinematics.cpp  QuadrupedBaseController.cpp  Settings.cpp  inverse_kinematics.cpp  main.cpp  trajectory_generator.cpp
src/solvers/: InverseSolverInterface.cpp
src/solvers/differential_solvers/: DifferentialSolver.cpp
src/solvers/gradient_based/: GradientBasedSolver.cpp  NewtonRaphson.cpp  NewtonRaphsonAD.cpp
src/solvers/iterational/: IterationalSolver.cpp  NewtonRaphson.cpp
src/solvers/iterational_solvers/: IterationalSolver.cpp
src_old/: forward_kinematics.cpp  main.cpp
test/: MultEndEffectorKinematicsTest.cpp  NewtonRaphsonTest.cpp  NewtonRaphsonTests.cpp
test/include/: MultiEndEffectorKinematicsTest.hpp
test/models/include/: InverseKinematicsTest.hpp
test/models/r6bot/: r6bot.urdf  r6bot.urdf.xacro
test/models/r6bot/launch/: view_r6bot.launch.py
test/models/r6bot/urdf/: r6bot_description.urdf.xacro
